Segunda entrega_Banderas

--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,9 @@
     <h1>Catalina Correa</h1>
     <ul>
          <li><a href="sitio_noticia/index.html"> Noticia</a> Entregado 28 de abril</li>
-
+         <li><a href="banderas/index.html"> Noticia</a> Entregado 16 de junio</li>
     </ul>
     
 </body>
 </html>
+
