Flex-box trabajo

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,9 @@
     <ul>
          <li><a href="sitio_noticia/index.html"> Noticia</a> Entregado 28 de abril</li>
          <li><a href="banderas/index.html"> Noticia</a> Entregado 16 de junio</li>
+         <li><a href="The who_Catalina Correa/index.html"> Flex-box</a> Entregado 14 de Julio</li>
     </ul>
+
     
 </body>
 </html>
