--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,7 @@
          <li><a href="sitio_noticia/index.html"> Noticia</a> Entregado 28 de abril</li>
          <li><a href="banderas/index.html"> Noticia</a> Entregado 16 de junio</li>
          <li><a href="The who_Catalina Correa/index.html"> Flex-box</a> Entregado 14 de Julio</li>
+         <li><a href="cata-final/index.html"> Flex-box</a> Entregado 26 de Julio</li>
     </ul>
 
     
