--- a/cata-final/index.html
+++ b/cata-final/index.html
@@ -43,7 +43,7 @@
       <div class="banner">
         <div class="contenedor">
           <div class="banner-principal">
-            <img src="../cuento de la criada img /criada bl:ng.jpg" alt=""width="90%" height="80%">
+            <img src="../cata-final/cuento de la criada img /criada bl:ng.jpg" alt=""width="90%" height="80%">
           </div>
         </div>
       </div>
@@ -56,8 +56,8 @@
               <h3 class="titulo-articulo">Reseña del libro</h3>
              
               <div >
-                <a class="example-image-link" href="../cuento de la criada img /portada libro.jpg" data-lightbox="example-1"><img class="example-image" src="../cuento de la criada img /ambas portadas de libro.jpg" alt="image-1" /></a>
-                <a class="example-image-link" href="../cuento de la criada img /mujeres luchando.jpeg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../cuento de la criada img /mujeres luchando.jpeg" alt="image-1" /></a>
+                <a class="example-image-link" href="../cata-final/cuento de la criada img /portada libro-2.png" data-lightbox="example-1"><img class="example-image" src="../cata-final/cuento de la criada img /ambas portadas de libro.jpg" alt="image-1" /></a>
+                <a class="example-image-link" href="../cata-final/cuento de la criada img /mujeres luchando.jpeg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../cata-final/cuento de la criada img /mujeres luchando.jpeg" alt="image-1" /></a>
               </div>
 
               <div class="texto-articulo">
@@ -88,7 +88,7 @@
               <!-- <p class="fecha-articulo">Marzo 3 de 2017</p> -->
               <h3 class="titulo-articulo">Reseña de la autora</h3>
               <p class="categoria-articulo">“Porque mi afán no ha sido entretenerte, sino informarte”</p>
-              <img src="../cuento de la criada img /comparativa autora:mujer.jpg" alt="">
+              <img src="../cata-final/cuento de la criada img /comparativa autora:mujer.jpg" alt="">
               <div class="texto-articulo">
                 <p>“Me gustaría creer que esto no es más que un cuento que estoy contando. Necesito creerlo. Debo creerlo. Los que pueden creer que estas historias son sólo cuentos tienen mejores posibilidades.“</p>
                 
@@ -104,7 +104,7 @@
             <div class="widget">
               <div class="autor-widget">
                 <div class="foto-autor">
-                  <img src="../cuento de la criada img /autora bl:ng.jpg" alt="Foto del autor">
+                  <img src="../cata-final/cuento de la criada img /autora bl:ng.jpg" alt="Foto del autor">
                 </div>
                 <div class="datos-autor">
                   <h3 class="nombre">Margaret artwood</h3>
