--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
          <li><a href="banderas/index.html"> Noticia</a> Entregado 16 de junio</li>
          <li><a href="The who_Catalina Correa/index.html"> Flex-box</a> Entregado 14 de Julio</li>
          <li><a href="cata-final/index.html"> Flex-box</a> Entregado 26 de Julio</li>
+         <li><a href="Sex education/index.html"> Sex-Education</a> Entregado 3 de Noviembre</li>
     </ul>
 
     
