--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
          <li><a href="The who_Catalina Correa/index.html"> Flex-box</a> Entregado 14 de Julio</li>
          <li><a href="cata-final/index.html"> Flex-box</a> Entregado 26 de Julio</li>
          <li><a href="Sex education/index.html"> Sex-Education</a> Entregado 3 de Noviembre</li>
+         <li><a href="sex education_./index.html"> Sex-Education</a> Entregado 24 de Noviembre</li>
     </ul>
 
     
