--- a/Sex_education/index.html
+++ b/Sex_education/index.html
@@ -81,7 +81,7 @@
       </p>
     </div>
     <div class="col-md-6 col-sm-12 col-xs-12">
-      <img src="assets/img/4.jpeg" class="img-fluid" alt="...">
+      <img src="assets/img/principal.jpg" class="img-fluid" alt="...">
     </div>
    
   </div>
